--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    123
+    <h1>Siema!</h1>
+    <p>To mje pierwsze REPO!</p>
+    <h2>Nic nie rozumiem...</h2>
   </body>
 </html>
