--- a/html/index.html
+++ b/html/index.html
@@ -12,5 +12,6 @@
     <h2>Nic nie rozumiem...</h2>
     123
     <p>chyba juz rozumiem...</p>
+    <p>to jest pierwszy branch</p>
   </body>
 </html>
